--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,5 +18,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  font-size: 16px;
   font-family: var(--font-montserrat-mono);
 }
