--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,14 +4,14 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #16191e;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     /* --background: #0a0a0a; */
     --background: #ffffff;
-    --foreground: #ededed;
+    --foreground: #16191e;
   }
 }
 
