--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,5 +19,5 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-size: 16px;
-  font-family: var(--font-montserrat-mono);
+  font-family: var(--font-montserrat);
 }
