--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,5 +20,5 @@ body {
   background: var(--background);
   font-size: 16px;
   font-family: var(--font-montserrat);
-  /* user-select: none; */
+  user-select: none;
 }
